return full image path when fetching data from wishlist
